# Quant-exploration

./: .gitignore  README.md  data-collector.ipynb  exploration.ipynb  pyproject.toml
.ipynb_checkpoints/: exploration-checkpoint.ipynb
Data/: ticker=AAPL.parquet  ticker=ABBV.parquet  ticker=ABNB.parquet  ticker=ABT.parquet  ticker=ACN.parquet  ticker=ADBE.parquet  ticker=AMAT.parquet  ticker=AMGN.parquet  ticker=AMT.parquet  ticker=AMZN.parquet  ticker=ASML.parquet  ticker=AVGO.parquet  ticker=AXP.parquet  ticker=AZN.parquet  ticker=BA.parquet  ticker=BABA.parquet  ticker=BAC.parquet  ticker=BLK.parquet  ticker=BMY.parquet  ticker=BUD.parquet  ticker=C.parquet  ticker=CAT.parquet  ticker=CHTR.parquet  ticker=CMCSA.parquet  ticker=COST.parquet  ticker=CRM.parquet  ticker=CSCO.parquet  ticker=CVX.parquet  ticker=DE.parquet  ticker=DHR.parquet  ticker=DIS.parquet  ticker=EL.parquet  ticker=FB.parquet  ticker=GE.parquet  ticker=GOOG.parquet  ticker=GOOGL.parquet  ticker=GS.parquet  ticker=HD.parquet  ticker=HDB.parquet  ticker=HON.parquet  (+58 more)
LightGBM/: data-collector.ipynb  exploration.ipynb  temp.csv
approach_LightGBM/: data-collector.ipynb  exploration.ipynb
approach_ReinforcementLearning/: exploration.ipynb  medium_attempt.ipynb
approach_ReinforcementLearning/tensorboard/A2C_1/: events.out.tfevents.1632444936.tomm-XPS-15-7590.69629.0
approach_ReinforcementLearning/tensorboard/A2C_2/: events.out.tfevents.1632445463.tomm-XPS-15-7590.69629.1
kaggle-crypto/: bamboo.ipynb  exploration.ipynb
(+3 files in other folders)
